--- a/aula 04/ex001.html
+++ b/aula 04/ex001.html
@@ -19,6 +19,12 @@
 
     <script>
         window.alert('Oi')
+        window.confirm('Está gostando de JS?')
+
+
+       let a = window.prompt('Qual é o seu nome?')
+
+       document.write(a)
     </script>
 </body>
 </html>
