--- a/dom.html
+++ b/dom.html
@@ -16,8 +16,8 @@
     <h1>Iniciando estudos em DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em Javascript</p>
-    <div class="msg">Clique em mim</div>
-
+    <div name="msg">Clique em mim</div>
+    
     <script>
         let p1 = document.getElementsByTagName('p')[1]
 
@@ -31,7 +31,7 @@
         /* f.style.color = 'black' */
 
         let g = document.querySelectorAll('div.msg')[0]
-        g.innerText = 'Rá'
+        /* g.innerText = 'Rá' */
     </script>
 </body>
 </html>
