--- a/condicoes.html
+++ b/condicoes.html
@@ -43,7 +43,7 @@
             let morar = document.querySelector('input#mora').value
             let resposta = document.getElementById('resposta')
 
-            console.log(morar)
+            //console.log(morar)
 
             if (morar == 'Brasil') {
                resposta.innerHTML = `<p>Você mora atualmento no ${morar}. Então é <strong>brasileiro(a).</strong></p>`
