--- a/excercicios/ex001/modelo.html
+++ b/excercicios/ex001/modelo.html
@@ -6,18 +6,18 @@
     <title>Modelo de exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
 
     <section>
-        <div>
-            Hello world!
+        <div id="msg">
+            
         </div>
 
-        <div>
-            Hello world!
+        <div id="foto">
+            <img id="imagem" src="img/manha.jpg" alt="Foto do dia.">
         </div>
     </section>
 
