--- a/excercicios/ex002/modelo.html
+++ b/excercicios/ex002/modelo.html
@@ -3,21 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Verificador de idade</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Verificador de idade</h1>
     </header>
 
     <section>
         <div>
-            Hello world!
+            <p>Ano de nascimento</p>
+            <input type="number" name="txtano" id="txtano" minlength="4">
+
+            <p>Sexo:</p>
+            <input type="radio" name="radsex" id="masc" checked>
+            <label for="masc">Masculino</label>
+            <input type="radio" name="radsex" id="fem">
+            <label for="fem">Feminino</label>
+
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
         </div>
 
-        <div>
-            Hello world!
+        <div id="resultado">
+           Preencha os dados acima para ver o resultado!
         </div>
     </section>
 
