--- a/excercicios/ex003/modelo.html
+++ b/excercicios/ex003/modelo.html
@@ -13,7 +13,20 @@
 
     <section>
         <div>
-            
+            <p>
+                <label for="inicio">Início:</label>
+                <input type="number" name="inicio" id="inicio">
+            </p>
+
+            <p>
+                <label for="fim">Fim:</label>
+                <input type="number" name="inicio" id="fim">
+            </p>
+
+            <p>
+                <label for="passo">Passo:</label>
+                <input type="number" name="passo" id="passo">
+            </p>
         </div>
 
         <div>
@@ -22,7 +35,7 @@
     </section>
 
     <footer>
-        
+        <p>&copy; Gabriel Lima</p>
     </footer>
 
     <script src="script.js"></script>
