--- a/excercicios/ex003/modelo.html
+++ b/excercicios/ex003/modelo.html
@@ -27,9 +27,13 @@
                 <label for="passo">Passo:</label>
                 <input type="number" name="passo" id="passo">
             </p>
+
+            <p>
+                <input type="button" value="Calcular" onclick="calcularPassos()">
+            </p>
         </div>
 
-        <div>
+        <div id="resultado">
            
         </div>
     </section>
