--- a/excercicios/ex003/modelo.html
+++ b/excercicios/ex003/modelo.html
@@ -25,7 +25,7 @@
 
             <p>
                 <label for="passo">Passo:</label>
-                <input type="number" name="passo" id="passo">
+                <input type="number" name="passo" id="passo" placeholder="Não pode ser 0 ou negativo.">
             </p>
 
             <p>
