update html e css

--- a/excercicios/ex003/modelo.html
+++ b/excercicios/ex003/modelo.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
+    <title>Calculando passos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Calculando passos</h1>
     </header>
 
     <section>
@@ -25,7 +25,7 @@
 
             <p>
                 <label for="passo">Passo:</label>
-                <input type="number" name="passo" id="passo" placeholder="Não pode ser 0 ou negativo.">
+                <input type="number" name="passo" id="passo" placeholder="Deve ser maior que 0.">
             </p>
 
             <p>
