--- a/excercicios/ex004/modelo.html
+++ b/excercicios/ex004/modelo.html
@@ -13,10 +13,13 @@
 
     <section>
         <div>
-            
+            <label for="numero">Número: </label>
+            <input type="number" name="numero" id="numero">
+
+            <button type="button" onclick="calcular()">Gerar Tabuada</button>
         </div>
 
-        <div>
+        <div id="resultado">
            
         </div>
     </section>
