--- a/excercicios/ex004/modelo.html
+++ b/excercicios/ex004/modelo.html
@@ -19,8 +19,10 @@
             <button type="button" onclick="calcular()">Gerar Tabuada</button>
         </div>
 
-        <div id="resultado">
-           
+        <div>
+           <textarea name="" id="resultado" cols="30" rows="10" placeholder="Digite um número acima">
+
+           </textarea>
         </div>
     </section>
 
