--- a/excercicios/ex005/modelo.html
+++ b/excercicios/ex005/modelo.html
@@ -17,10 +17,11 @@
             <input type="number" name="numero" id="numero">
 
             <button type="button" onclick="calcular()">Adicionar</button>
+            <button type="button" onclick="limpar()">Limpar</button>
         </div>
 
         <div>
-           <select name="" id="adicionados" size="20"></select>
+           <select name="" id="adicionados" size="10"></select>
            <div id="resposta"></div>
         </div>
     </section>
