--- a/excercicios/ex005/modelo.html
+++ b/excercicios/ex005/modelo.html
@@ -14,7 +14,7 @@
     <section>
         <div id="cima">
             <label for="numero">Número (Entre 1 e 100): </label>
-            <input type="number" name="numero" id="numero">
+            <input type="number" name="numero" id="numero" value="1" max="100" min="1">
 
             <button type="button" onclick="calcular()">Adicionar</button>
             <button type="button" onclick="limpar()">Limpar</button>
