--- a/excercicios/ex005/modelo.html
+++ b/excercicios/ex005/modelo.html
@@ -16,12 +16,13 @@
             <label for="numero">Número (Entre 1 e 100): </label>
             <input type="number" name="numero" id="numero" value="1" max="100" min="1">
 
-            <button type="button" onclick="calcular()">Adicionar</button>
+            <button type="button" onclick="adicionar()">Adicionar</button>
             <button type="button" onclick="limpar()">Limpar</button>
         </div>
 
         <div>
            <select name="" id="adicionados" size="10"></select>
+           <button type="button" onclick="finalizar()">Verificar</button>
            <div id="resposta"></div>
         </div>
     </section>
