--- a/excercicios/ex005/modelo.html
+++ b/excercicios/ex005/modelo.html
@@ -21,7 +21,7 @@
         </div>
 
         <div>
-           <select name="" id="adicionados" size="10"></select>
+           <select name="" id="adicionados" size="6" style="display: block; margin-bottom: 5px;"></select>
            <button type="button" onclick="finalizar()">Verificar</button>
            <div id="resposta"></div>
         </div>
